Fix localize tool header overlapping content. Add per-language CSS override. Replace jquery page numbers with baked values. Change missing terms to show term rather than just underlining existing string.

--- a/css/main.css
+++ b/css/main.css
@@ -699,9 +699,15 @@ td, th {
 	height: 60px;
 	background: #F0F8FF;
 	position: fixed;
+	z-index: 9999;
 	padding: 5px;
 	top: 0;
 }
+
+#ManualContent {
+	padding-top: 60px;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
